# doomscrl

./: .gitignore  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt
artifacts/tiktok-final-high300/: failures.csv  metadata.csv  urls.txt
artifacts/tiktok-final-random500/: failures.csv  metadata.csv  urls.txt
artifacts/tiktok-final-top200/: failures.csv  metadata.csv  urls.txt
artifacts/tiktok-random-100/: failures.csv  metadata.csv  urls.txt
artifacts/tiktok-random-5-dry/: metadata.csv  urls.txt
artifacts/tiktok-sample-10/: metadata.csv  urls.txt
artifacts/tiktok-top-playcount-10/: metadata.csv  urls.txt
configs/: train.yaml
datasets/tiktok-10M/: README.md
doomscollmaxxer_rl_20260330/doomscollmaxxer_rl_runs_20260330/: video_catalog.json
models/tribev2/: README.md
models/vjepa-/: README.md  config.json  notebook.ipynb
scripts/: check_training_ready.py  cluster_videos.py  download_prepared_videos_pre_resize.py  export_brain_mesh.py  export_brain_model.py  export_demo_sessions.py  export_random_demo_phone_videos.py  gpu_setup.sh  precompute_features.py  prepare_videos.py  render_policy_replay.py  run_precompute.sh  sample_tiktok_videos.py
src/: brain.py  brain_regions.py  callbacks.py  catalog.py  reward.py  train.py
src/env/: __init__.py  base.py  scroll_env.py  scroll_select_env.py
web/: next.config.js  package-lock.json  package.json
web/app/: globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx
web/app/components/: Architecture.tsx  BrainScene.tsx  (+9 more)
web/pages/: _error.tsx
web/public/: brain_mesh.json
(+16 files in other folders)
